Generator.Tests.Abstraction/TestCases/InvalidTypeConversion/Composition1/InvalidTypeConversionFromEntity1.cs
namespace Paukertj.Autoconverter.Generator.Tests.Abstraction.TestCases.InvalidTypeConversion.Composition1
{
    public class InvalidTypeConversionFromEntity1
    {
        public string Property { get; set; }
    }
}
